manifests/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
spec:
  containers:
    - name: nginx-pod
      image: nginx:latest
      resources:
        requests:
          cpu: "500m"
          memory: "250Mi"
        limits:
          cpu: "1000m"
          memory: "500Mi"
      ports:
        - containerPort: 80
          protocol: TCP
