manifests/mern-app.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-app-service
  labels:
    app: mern-app-server
spec:
  type: LoadBalancer
  selector:
    app: mern-app-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app-deployment
spec:
  selector:
    matchLabels:
      app: mern-app-server
  replicas: 1
  template:
    metadata:
      labels:
        app: mern-app-server
    spec:
      containers:
        - name: multi
          image: anpbucket/multistage-mern:prod
          resources:
            requests:
              cpu: "500m"
              memory: "250Mi"
            limits:
              cpu: "1000m"
              memory: "500Mi"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
