manifests/mern-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-app-service
spec:
  type: LoadBalancer
  selector:
    app: mern-app-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
