manifests/mongodb.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb-server
spec:
  containers:
    - name: mongodb-server
      image: anpbucket/mongo-with-check:3.6
      resources:
        requests:
          cpu: "500m"
          memory: "250Mi"
        limits:
          cpu: "1000m"
          memory: "500Mi"
      ports:
        - containerPort: 27017
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  type: ClusterIP
  selector:
    app: mongodb-server
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
