manifests/nginx-app.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-pod
  ports:
    - protocol: TCP
      port: 80 # This is the port the Loadbalancer is listening at
      targetPort: 80 # This is the port the container is listening at

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
spec:
  containers:
    - name: nginx-pod
      image: nginx:latest
      resources:
        requests:
          cpu: "500m"
          memory: "250Mi"
        limits:
          cpu: "1000m"
          memory: "500Mi"
      ports:
        - containerPort: 80
          protocol: TCP
