manifests/visual-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monit-ingress
  namespace: ingress-nginx

spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.machalan.tk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
             name: prometheus-kube-prometheus-prometheus
             port:
               number: 9090
